actualizando punto 3 y 5 a limpio

--- a/notebooks/Main_B.ipynb
+++ b/notebooks/Main_B.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 17,
    "id": "80db1157",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 18,
    "id": "62953d7c",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 19,
    "id": "ca5fb30b",
    "metadata": {},
    "outputs": [],
@@ -89,8 +89,8 @@
     "    new_list_i.append(new_elem)\n",
     "\n",
     "aglomerados_individuos = agrupar_por_aglomerado(new_list_i)\n",
-    "años_trimestres_individuos = agrupar_por_anio_y_trimestre(new_list_i)\n",
-    "ultimos_individuos = obtener_ultimo_archivo(años_trimestres_individuos)\n"
+    "anios_trimestres_individuos = agrupar_por_anio_y_trimestre(new_list_i)\n",
+    "ultimos_individuos = obtener_ultimo_archivo(anios_trimestres_individuos)\n"
    ]
   },
   {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 20,
    "id": "5da67db5",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "id": "a981f232",
    "metadata": {},
    "outputs": [],
@@ -222,6 +222,7 @@
     "        print(f\"  - Analfabetismo: {por_ana:.2f}%\")\n",
     "        print(f\"  - Desconocido: {por_desc:.2f}%\\n\")\n",
     "\n",
+    "\n",
     "def actividad_1(individuos):\n",
     "    analizar_analfabetismo(individuos)\n",
     "\n"
@@ -229,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 22,
    "id": "229ce836",
    "metadata": {},
    "outputs": [
@@ -251,7 +252,7 @@
     }
    ],
    "source": [
-    "actividad_1(años_trimestres_individuos)"
+    "actividad_1(anios_trimestres_individuos)"
    ]
   },
   {
@@ -263,58 +264,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0b7a8a4a",
-   "metadata": {},
-   "source": [
-    "#### Tabla individual  \n",
-    "1- ANO4 N (4) Año de relevamiento (4 dígitos)\n",
-    "\n",
-    "2- TRIMESTRE N (1) Ventana de observación  \n",
-    "- = 1° trimestre  \n",
-    "- = 2° trimestre  \n",
-    "- = 3° trimestre  \n",
-    "- = 4° trimestre  \n",
-    "\n",
-    "9- PONDERA N (6) Ponderación  \n",
-    "\n",
-    "19- CH12 N (2) ¿Cuál es el nivel más alto que cursa o cursó?\n",
-    "- 1 = Jardín/preescolar\n",
-    "- 2 = Primario\n",
-    "- 3 = EGB\n",
-    "- 4 = Secundario\n",
-    "- 5 = Polimodal\n",
-    "- 6 = Terciario\n",
-    "- 7 = Universitario\n",
-    "- 8 = Posgrado universitario\n",
-    "- 9 = Educación especial (discapacitado)\n",
-    "\n",
-    "22- CH15 N (1) ¿Dónde nació?\n",
-    "1. En esta localidad\n",
-    "2. En otra localidad de esta provincia\n",
-    "3. En otra provincia (especificar)\n",
-    "4. En un país limítrofe (especificar: Brasil, Bolivia, Chile, Paraguay, Uruguay)\n",
-    "5. En otro país (especificar)\n",
-    "9. Ns/Nr\n",
-    "\n",
-    "26- NIVEL_ED N (1) Nivel educativo\n",
-    "- 1 = Primario incompleto (incluye educación especial)\n",
-    "- 2 = Primario completo\n",
-    "- 3 = Secundario incompleto\n",
-    "- 4 = Secundario completo\n",
-    "- 5 = Superior universitario incompleto\n",
-    "- 6 = Superior universitario completo\n",
-    "- 7 = Sin instrucción\n",
-    "- 9 = Ns/Nr\n",
-    "\n",
-    "______________________________\n",
-    "Columnas usadas: 1 - 2 - 9 - 19 - 22"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "7e2c6e15",
+   "execution_count": 41,
+   "id": "b1eda1b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,30 +276,6 @@
     "def es_universitario(valor_ch12):\n",
     "    return valor_ch12 in ['7', '8']\n",
     "\n",
-    "def activ2 (dict_trimestres,anio_elegido= 0,trimestre_elegido= 0):\n",
-    "    try:\n",
-    "        poblacion, ext_univ = 0, 0\n",
-    "        for elem in dict_trimestres[anio_elegido][trimestre_elegido]:\n",
-    "            pondera = int(elem[8])\n",
-    "            poblacion += pondera\n",
-    "            if not es_extranjero(elem[22]):\n",
-    "                continue \n",
-    "            if not es_universitario(elem[19]):\n",
-    "                continue \n",
-    "            ext_univ += pondera\n",
-    "        return porcentaje(ext_univ,poblacion)\n",
-    "    \n",
-    "    except KeyError: \n",
-    "        print(f'Valores no encontrados en el diccionario')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b1eda1b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def contar_extranjeros_universitarios(filas):\n",
     "    # Calcula la cantidad de extranjeros, universitarios y ambos combinados\n",
     "    total_extranjeros = total_universitarios = total_universitarios_extranjeros = 0\n",
@@ -365,20 +293,49 @@
     "        if es_universitario(ch12):\n",
     "            total_universitarios += pondera\n",
     "\n",
-    "    return total_extranjeros, total_universitarios, total_universitarios_extranjeros"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "087e6470",
-   "metadata": {},
-   "source": [
-    "Se toma el porcentaje de universitarios recibidos sobre la poblacion total, a chequear si es sobre la poblacion de extranjeros"
+    "    return total_extranjeros, total_universitarios, total_universitarios_extranjeros\n",
+    "\n",
+    "def porcentajes_universitarios_extranjeros(total_extranjeros, total_universitarios, total_universitarios_extranjeros):\n",
+    "    \"\"\"\n",
+    "    Calcula tres porcentajes:\n",
+    "    - % de universitarios extranjeros sobre el total de extranjeros\n",
+    "    - % de universitarios extranjeros sobre el total de universitarios\n",
+    "    - % de universitarios extranjeros sobre el total de la muestra combinada\n",
+    "    \"\"\"\n",
+    "    total_muestra = total_extranjeros + total_universitarios  # para referencia general\n",
+    "\n",
+    "    por_sobre_extranjeros = porcentaje(total_universitarios_extranjeros, total_extranjeros) if total_extranjeros else 0\n",
+    "\n",
+    "    por_sobre_universitarios = porcentaje(total_universitarios_extranjeros, total_universitarios) if total_universitarios else 0\n",
+    "\n",
+    "    por_sobre_muestra = porcentaje(total_universitarios_extranjeros, total_muestra) if total_muestra else 0\n",
+    "\n",
+    "    return round(por_sobre_extranjeros, 2), round(por_sobre_universitarios, 2), round(por_sobre_muestra, 2)\n",
+    "\n",
+    "def analizar_universitarios_extranjeros(anios_trimestres_individuos):\n",
+    "    \"\"\"\n",
+    "    Para cada año, analiza el último trimestre disponible y muestra:\n",
+    "    - % de universitarios extranjeros sobre extranjeros\n",
+    "    - % de universitarios extranjeros sobre universitarios\n",
+    "    - % sobre el total combinado\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    anio = input(\"ingrese el año a buscar\")    \n",
+    "    trimestre = input(f\"ingrese el trimestre a buscar de {anio}\")\n",
+    "    filas = anios_trimestres_individuos[anio][trimestre]\n",
+    "\n",
+    "    total_ext, total_univ, total_ext_univ = contar_extranjeros_universitarios(filas)\n",
+    "    p1, p2, p3 = porcentajes_universitarios_extranjeros(total_ext, total_univ, total_ext_univ)\n",
+    "\n",
+    "    print(f\"Año {anio}, Trimestre {trimestre}\")\n",
+    "    print(f\"  - % Univ. Extranjeros / Total Extranjeros: {p1:.2f}%\")\n",
+    "    print(f\"  - % Univ. Extranjeros / Total Univ.: {p2:.2f}%\")\n",
+    "    print(f\"  - % Univ. Extranjeros / Muestra combinada: {p3:.2f}%\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 42,
    "id": "1d81e323",
    "metadata": {},
    "outputs": [
@@ -386,16 +343,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "el porcentaje de personas extranjeras universitarias es: 0.53\n"
+      "Año 2024, Trimestre 2\n",
+      "  - % Univ. Extranjeros / Total Extranjeros: 20.96%\n",
+      "  - % Univ. Extranjeros / Total Univ.: 5.70%\n",
+      "  - % Univ. Extranjeros / Muestra combinada: 4.48%\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "anio_elegido = input(\"ingrese el año a buscar\")\n",
-    "trimestre_elegido = input(\"ingrese el trimestre a buscar\")\n",
-    "porcentaje_ext_univ = activ2(años_trimestres_individuos,anio_elegido,trimestre_elegido)\n",
-    "if porcentaje_ext_univ: \n",
-    "    print(f'el porcentaje de personas extranjeras universitarias es: {porcentaje_ext_univ:.2f}')"
+    "analizar_universitarios_extranjeros(anios_trimestres_individuos)"
    ]
   },
   {
@@ -423,54 +380,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "id": "e63c22ae",
+   "execution_count": 48,
+   "id": "91fcac66",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calcular_tasa_desempleo (dict_trimestres):\n",
-    "    dict_tasa = {}\n",
-    "    for anio in dict_trimestres:\n",
-    "        if anio not in dict_tasa:\n",
-    "            dict_tasa[anio] = {}\n",
-    "        \n",
-    "        for trimestre in dict_trimestres[anio]:\n",
-    "            \n",
-    "            if trimestre not in dict_tasa[anio]:\n",
-    "                dict_tasa[anio][trimestre] = 0.0\n",
-    "            \n",
-    "            ocupados, desocupados = 0, 0\n",
-    "            for elem in dict_trimestres[anio][trimestre]: \n",
-    "                pondera = int(elem[8])\n",
-    "                if elem[27] == \"1\":\n",
-    "                    ocupados += pondera\n",
-    "                elif elem[27] == \"2\":\n",
-    "                    desocupados += pondera\n",
-    "            \n",
-    "            activos = desocupados + ocupados\n",
-    "            dict_tasa[anio][trimestre] = porcentaje(desocupados,activos)\n",
-    "    return dict_tasa\n",
+    "def calcular_tasa_desocupacion(filas):\n",
+    "    \"\"\"\n",
+    "    Calcula el total de desocupados y total activos (ocupados + desocupados) ponderados.\n",
+    "    \"\"\"\n",
+    "    total_desocupados = total_activos = 0\n",
     "\n",
-    "def calcular_menor_tasa_desempleo(dict_tasa):\n",
-    "    min_tasa = 100\n",
-    "    for anio, trimestres in dict_tasa.items():\n",
-    "        for trimestre, tasa in trimestres.items():\n",
-    "            if tasa < min_tasa:\n",
-    "                min_tasa = tasa\n",
-    "                max_anio = anio\n",
-    "                max_trimestre = trimestre\n",
-    "    return max_anio, max_trimestre, min_tasa\n",
+    "    for fila in filas:\n",
+    "        estado = fila[27]\n",
+    "        pondera = int(fila[8])\n",
     "\n",
-    "def activ_3(dict_trimestres):\n",
-    "    dict_tasa = calcular_tasa_desempleo(dict_trimestres)\n",
-    "    max_anio, max_trimestre, max_tasa = calcular_menor_tasa_desempleo(dict_tasa)\n",
-    "    print(f\"Menor tasa de desempleo: {max_tasa:.2f}% en año {max_anio}, trimestre {max_trimestre}\")\n",
-    "\n"
+    "        if estado == '2':  # Desocupado\n",
+    "            total_desocupados += pondera\n",
+    "            total_activos += pondera\n",
+    "        elif estado == '1':  # Ocupado\n",
+    "            total_activos += pondera\n",
+    "\n",
+    "    return porcentaje(total_desocupados, total_activos)\n",
+    "\n",
+    "def buscar_menor_desocupacion(anios_trimestres_individuos):\n",
+    "    \"\"\"\n",
+    "    Recorre todos los años y trimestres y encuentra el de menor tasa de desocupación.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    menor_tasa = None\n",
+    "    anio_menor = None\n",
+    "    trimestre_menor = None\n",
+    "    \n",
+    "    for anio in anios_trimestres_individuos:\n",
+    "\n",
+    "        for trimestre in anios_trimestres_individuos[anio]:\n",
+    "\n",
+    "            filas = anios_trimestres_individuos[anio][trimestre]\n",
+    "            tasa = calcular_tasa_desocupacion(filas)\n",
+    "\n",
+    "            if (menor_tasa is None) or (tasa < menor_tasa):\n",
+    "                menor_tasa = tasa\n",
+    "                anio_menor = anio\n",
+    "                trimestre_menor = trimestre\n",
+    "\n",
+    "    print(f\"\\nEl menor porcentaje de desocupación fue de {menor_tasa:.2f}%\")\n",
+    "    print(f\"Año: {anio_menor}, Trimestre: {trimestre_menor}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 49,
    "id": "3e646b09",
    "metadata": {},
    "outputs": [
@@ -478,12 +438,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Menor tasa de desempleo: 4.71% en año 2023, trimestre 4\n"
+      "\n",
+      "El menor porcentaje de desocupación fue de 4.71%\n",
+      "Año: 2023, Trimestre: 4\n"
      ]
     }
    ],
    "source": [
-    "activ_3(años_trimestres_individuos)"
+    "buscar_menor_desocupacion(anios_trimestres_individuos)"
    ]
   },
   {
@@ -507,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 28,
    "id": "cd9dc092",
    "metadata": {},
    "outputs": [],
@@ -604,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 29,
    "id": "fc004fb6",
    "metadata": {},
    "outputs": [
@@ -617,7 +579,7 @@
     }
    ],
    "source": [
-    "activ4(años_trimestres_individuos,años_trimestres_hogares)"
+    "activ4(anios_trimestres_individuos,años_trimestres_hogares)"
    ]
   },
   {
@@ -631,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 57,
    "id": "01e6365e",
    "metadata": {},
    "outputs": [],
@@ -655,18 +617,24 @@
     "                resultados[aglomerado]['total'] += pondera \n",
     "            except:\n",
     "                continue\n",
+    "    \n",
     "    # Calcular porcentaje para cada aglomerado\n",
+    "    porcentaje_max = 0\n",
     "    for aglomerado, valores in sorted(resultados.items()):\n",
     "        \n",
     "        porcentaje_prop = porcentaje(valores[\"propietarios\"], valores[\"total\"])\n",
     "        \n",
-    "        print(f\"Aglomerado {aglomerado}: {porcentaje_prop:.2f}% viviendas de propietarios\")\n",
+    "        if porcentaje_prop > porcentaje_max:\n",
+    "            porcentaje_max = porcentaje_prop\n",
+    "            aglomerado_max = aglomerado \n",
+    "    \n",
+    "    print(f\"el Aglomerado {aglomerado_max} tuvo el mayor porcentaje, con: {porcentaje_max:.2f}% viviendas de propietarios\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 58,
    "id": "d516b09d",
    "metadata": {},
    "outputs": [
@@ -674,38 +642,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Aglomerado 10: 60.77% viviendas de propietarios\n",
-      "Aglomerado 12: 69.69% viviendas de propietarios\n",
-      "Aglomerado 13: 51.33% viviendas de propietarios\n",
-      "Aglomerado 14: 74.32% viviendas de propietarios\n",
-      "Aglomerado 15: 77.97% viviendas de propietarios\n",
-      "Aglomerado 17: 65.89% viviendas de propietarios\n",
-      "Aglomerado 18: 85.90% viviendas de propietarios\n",
-      "Aglomerado 19: 80.18% viviendas de propietarios\n",
-      "Aglomerado 2: 66.95% viviendas de propietarios\n",
-      "Aglomerado 20: 50.45% viviendas de propietarios\n",
-      "Aglomerado 22: 83.34% viviendas de propietarios\n",
-      "Aglomerado 23: 66.98% viviendas de propietarios\n",
-      "Aglomerado 25: 72.74% viviendas de propietarios\n",
-      "Aglomerado 26: 63.48% viviendas de propietarios\n",
-      "Aglomerado 27: 64.93% viviendas de propietarios\n",
-      "Aglomerado 29: 67.26% viviendas de propietarios\n",
-      "Aglomerado 3: 62.95% viviendas de propietarios\n",
-      "Aglomerado 30: 59.61% viviendas de propietarios\n",
-      "Aglomerado 31: 52.61% viviendas de propietarios\n",
-      "Aglomerado 32: 53.63% viviendas de propietarios\n",
-      "Aglomerado 33: 71.48% viviendas de propietarios\n",
-      "Aglomerado 34: 68.64% viviendas de propietarios\n",
-      "Aglomerado 36: 56.95% viviendas de propietarios\n",
-      "Aglomerado 38: 72.37% viviendas de propietarios\n",
-      "Aglomerado 4: 67.89% viviendas de propietarios\n",
-      "Aglomerado 5: 70.87% viviendas de propietarios\n",
-      "Aglomerado 6: 71.87% viviendas de propietarios\n",
-      "Aglomerado 7: 70.50% viviendas de propietarios\n",
-      "Aglomerado 8: 79.05% viviendas de propietarios\n",
-      "Aglomerado 9: 66.09% viviendas de propietarios\n",
-      "Aglomerado 91: 64.33% viviendas de propietarios\n",
-      "Aglomerado 93: 66.30% viviendas de propietarios\n"
+      "el Aglomerado 18 tuvo el mayor porcentaje, con: 85.90% viviendas de propietarios\n"
      ]
     }
    ],
@@ -732,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 32,
    "id": "15af1a1d",
    "metadata": {},
    "outputs": [],
