arreglando y pasando a limpio punto 6, 7, 8 y 9, archivo usu_individual.cvs.csv eliminado (archivo inecesario)

--- a/notebooks/Main_B_v3.ipynb
+++ b/notebooks/Main_B_v3.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "80db1157",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5ebf97d6",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "a84362ab",
    "metadata": {},
    "outputs": [],
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a59ec020",
    "metadata": {},
    "outputs": [],
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "50e2b13e",
    "metadata": {},
    "outputs": [
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "1d2de912",
    "metadata": {},
    "outputs": [],
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "1eecb434",
    "metadata": {},
    "outputs": [
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "4fb2d88e",
    "metadata": {},
    "outputs": [],
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "fa48708f",
    "metadata": {},
    "outputs": [
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "fbf600ef",
    "metadata": {},
    "outputs": [],
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "bf8c9785",
    "metadata": {},
    "outputs": [
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "73ac7924",
    "metadata": {},
    "outputs": [
@@ -1145,22 +1145,22 @@
     }
    ],
    "source": [
-    "def aglomerado_mas_viviendas_sin_banio(filas, año, trimestre, col_anio=1, col_trimestre=2, col_aglomerado=7, col_pondera=8, col_banio=19, col_miembros=64):\n",
+    "def aglomerado_mas_viviendas_sin_banio(fila, año, trimestre, col_anio=1, col_trimestre=2, col_aglomerado=7, col_pondera=8, col_banio=19, col_miembros=64):\n",
     "    \"\"\"\n",
     "    Recorre todas las filas y devuelve el aglomerado con más viviendas sin baño\n",
     "    y más de dos ocupantes para un año y trimestre específicos.\n",
     "    \"\"\"\n",
     "    conteo = {}\n",
     "\n",
-    "    for fila in filas:\n",
-    "        anio_fila = int(fila[col_anio])\n",
-    "        trimestre_fila = int(fila[col_trimestre])\n",
+    "    for encuesta in fila:\n",
+    "        anio_fila = int(encuesta[col_anio])\n",
+    "        trimestre_fila = int(encuesta[col_trimestre])\n",
     "\n",
     "        if anio_fila == año and trimestre_fila == trimestre:\n",
-    "            aglomerado = fila[col_aglomerado]\n",
-    "            pondera = int(fila[col_pondera])\n",
-    "            tiene_banio = fila[col_banio]\n",
-    "            miembros = int(fila[col_miembros])\n",
+    "            aglomerado = encuesta[col_aglomerado]\n",
+    "            pondera = int(encuesta[col_pondera])\n",
+    "            tiene_banio = encuesta[col_banio]\n",
+    "            miembros = int(encuesta[col_miembros])\n",
     "\n",
     "            if tiene_banio == '2' and miembros > 2:\n",
     "                if aglomerado not in conteo:\n",
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "a89e774b",
    "metadata": {},
    "outputs": [],
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "4318f4dd",
    "metadata": {},
    "outputs": [
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "21d15f24",
    "metadata": {},
    "outputs": [],
@@ -1431,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "73499fe4",
    "metadata": {},
    "outputs": [
@@ -1536,7 +1536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "id": "09a3b7a4",
    "metadata": {},
    "outputs": [
@@ -1591,6 +1591,7 @@
     "            tabla[clave]['Secundario incompleto'] += pondera\n",
     "        elif nivel == '4':\n",
     "            tabla[clave]['Secundario completo'] += pondera\n",
+    "            print(\"2\")\n",
     "        elif nivel in ['5', '6']:\n",
     "            tabla[clave]['Superior o universitario'] += pondera\n",
     "\n",
@@ -1628,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "dea55a4f",
    "metadata": {},
    "outputs": [],
@@ -1699,7 +1700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "3f7a3656",
    "metadata": {},
    "outputs": [
@@ -1761,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "70466da0",
    "metadata": {},
    "outputs": [],
@@ -1896,7 +1897,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
