punto 12 terminado (falta comprobar con mayor cantidad de jubilados

--- a/notebooks/Main_B.ipynb
+++ b/notebooks/Main_B.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 90,
    "id": "80db1157",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 91,
    "id": "62953d7c",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 92,
    "id": "d87dd350",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 93,
    "id": "ca5fb30b",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 94,
    "id": "5da67db5",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 95,
    "id": "a981f232",
    "metadata": {},
    "outputs": [],
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 96,
    "id": "229ce836",
    "metadata": {},
    "outputs": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 97,
    "id": "7e2c6e15",
    "metadata": {},
    "outputs": [],
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 98,
    "id": "b1eda1b7",
    "metadata": {},
    "outputs": [],
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 99,
    "id": "1d81e323",
    "metadata": {},
    "outputs": [
@@ -466,7 +466,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "el porcentaje de personas extranjeras universitarias es: 0.53\n"
+      "Valores no encontrados en el diccionario\n"
      ]
     }
    ],
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 100,
    "id": "e63c22ae",
    "metadata": {},
    "outputs": [],
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 101,
    "id": "3e646b09",
    "metadata": {},
    "outputs": [
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 102,
    "id": "cd9dc092",
    "metadata": {},
    "outputs": [],
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 103,
    "id": "fc004fb6",
    "metadata": {},
    "outputs": [
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 104,
    "id": "01e6365e",
    "metadata": {},
    "outputs": [],
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 105,
    "id": "d516b09d",
    "metadata": {},
    "outputs": [
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 106,
    "id": "7bb8411e",
    "metadata": {},
    "outputs": [],
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 107,
    "id": "1c81a27b",
    "metadata": {},
    "outputs": [
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 108,
    "id": "00d16cc7",
    "metadata": {},
    "outputs": [],
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 109,
    "id": "fbd72caf",
    "metadata": {},
    "outputs": [
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 110,
    "id": "4fccbc37",
    "metadata": {},
    "outputs": [],
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 111,
    "id": "619060ae",
    "metadata": {},
    "outputs": [
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 112,
    "id": "8fe1e7e7",
    "metadata": {},
    "outputs": [],
@@ -1159,23 +1159,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 113,
    "id": "2229cb59",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Tabla de personas mayores de edad por nivel educativo en el aglomerado 32:\n",
-      "\n",
-      "| Año    | Trimestre |    Primario incompleto |    Primario completo |    Secundario incompleto |    Secundario completo |     Superior o universitario |\n",
-      "|--------|-----------|------------------------|----------------------|--------------------------|------------------------|------------------------------|\n",
-      "| 2023   | 3         |                  39308 |              2271963 |                   199845 |                1947317 |                      1440226 |\n",
-      "| 2023   | 4         |                  23760 |              2295928 |                   261267 |                1904134 |                      1402039 |\n",
-      "| 2024   | 1         |                  20118 |              2288673 |                   215817 |                1954208 |                      1354660 |\n",
-      "| 2024   | 2         |                  23342 |              2280445 |                   226205 |                1936745 |                      1406389 |\n"
+     "ename": "KeyError",
+     "evalue": "'l'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[113]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m aglomerado = \u001b[38;5;28minput\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mingrese el aglomerado a buscar\u001b[39m\u001b[33m\"\u001b[39m) \n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mtabla_porcentaje_secundario_incompleto\u001b[49m\u001b[43m(\u001b[49m\u001b[43maglomerados_individuos\u001b[49m\u001b[43m,\u001b[49m\u001b[43maglomerado\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[112]\u001b[39m\u001b[32m, line 6\u001b[39m, in \u001b[36mtabla_porcentaje_secundario_incompleto\u001b[39m\u001b[34m(filas_aglomerado, aglomerado)\u001b[39m\n\u001b[32m      3\u001b[39m tabla = {}\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# Filtrar por aglomerado\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m filas_por_aglo = \u001b[43mfilas_aglomerado\u001b[49m\u001b[43m[\u001b[49m\u001b[43maglomerado\u001b[49m\u001b[43m]\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[38;5;66;03m# Filtrar por mayores de edad (edad >= 18)\u001b[39;00m\n\u001b[32m      8\u001b[39m filas_filtradas = \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mfilter\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m f: \u001b[38;5;28mint\u001b[39m(f[\u001b[32m13\u001b[39m]) >= \u001b[32m18\u001b[39m, filas_por_aglo, ))\n",
+      "\u001b[31mKeyError\u001b[39m: 'l'"
      ]
     }
    ],
@@ -1197,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "id": "587b6c1d",
    "metadata": {},
    "outputs": [],
@@ -1268,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "id": "d86710f8",
    "metadata": {},
    "outputs": [
@@ -1307,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": null,
    "id": "5e84ac73",
    "metadata": {},
    "outputs": [],
@@ -1370,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": null,
    "id": "af519721",
    "metadata": {},
    "outputs": [
@@ -1390,8 +1387,118 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "98210b8f",
+   "metadata": {},
+   "source": [
+    "### Consulta 12  \n",
+    "12. A partir de la información del último trimestre almacenado en el sistema se debe\n",
+    "retornar para cada aglomerado el porcentaje de jubilados que vivan en una vivienda\n",
+    "con CONDICION_DE_HABITABILIDAD insuficiente"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 121,
+   "id": "9f9d5375",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def activ_12 (individuos, hogares): \n",
+    "\n",
+    "    jubilados = {}\n",
+    "    insuficientes = {}\n",
+    "    porcentajes_aglo = {}\n",
+    "    insuficientes_CODUSU = []\n",
+    "\n",
+    "    for aglomerado in individuos:\n",
+    "        \n",
+    "        if aglomerado not in porcentajes_aglo: \n",
+    "            jubilados[aglomerado] = []\n",
+    "\n",
+    "        for elem in individuos[aglomerado]:\n",
+    "            if elem[29] == \"1\":\n",
+    "                jubilados[aglomerado].append(elem)\n",
+    "\n",
+    "        for elem in hogares[aglomerado]: \n",
+    "            if elem[len(elem)-1] == \"insuficiente\": \n",
+    "                insuficientes_CODUSU.append(elem[0])\n",
+    "\n",
+    "    for aglomerado in jubilados:\n",
+    "        \n",
+    "        total = jub_insuficientes = 0 \n",
+    "\n",
+    "        for elem in jubilados[aglomerado]: \n",
+    "            pondera = int(elem[8])\n",
+    "            \n",
+    "            if elem[0] in insuficientes_CODUSU: \n",
+    "                jub_insuficientes += pondera \n",
+    "\n",
+    "            total += pondera\n",
+    "\n",
+    "        if aglomerado not in porcentajes_aglo:\n",
+    "            porcentajes_aglo[aglomerado] = 0.0\n",
+    "        porcentajes_aglo[aglomerado] = porcentaje(jub_insuficientes,total)\n",
+    "\n",
+    "    print(f'la cantidad de jubilados en viviendas insuficientes para cada aglomerado son: ')\n",
+    "    for aglomerado in porcentajes_aglo: \n",
+    "        print(f'{aglomerado} : {porcentajes_aglo[aglomerado]}')\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "1e86ed28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "la cantidad de jubilados en viviendas insuficientes para cada aglomerado son: \n",
+      "32 : 0.0\n",
+      "33 : 0.0\n",
+      "22 : 0.0\n",
+      "19 : 0.0\n",
+      "13 : 0.0\n",
+      "36 : 0.0\n",
+      "14 : 0.0\n",
+      "15 : 0.0\n",
+      "8 : 0.9803921568627451\n",
+      "9 : 0.0\n",
+      "25 : 0.0\n",
+      "91 : 0.0\n",
+      "93 : 0.0\n",
+      "34 : 0.0\n",
+      "38 : 0.0\n",
+      "6 : 0.0\n",
+      "30 : 0.0\n",
+      "3 : 0.0\n",
+      "12 : 0.0\n",
+      "10 : 0.0\n",
+      "7 : 0.0\n",
+      "17 : 0.0\n",
+      "23 : 0.0\n",
+      "5 : 0.0\n",
+      "27 : 0.0\n",
+      "29 : 0.0\n",
+      "4 : 0.0\n",
+      "31 : 0.0\n",
+      "26 : 0.0\n",
+      "20 : 0.0\n",
+      "18 : 0.0\n",
+      "2 : 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "activ_12(ultimos_individuos_aglomerados,ultimos_hogares_aglomerados)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "15af1a1d",
    "metadata": {},
    "outputs": [],
